kotlin-ide/idea/testData/multiplatform/platformDependencyInCommon/js/js.kt
fun checkCloneableIsAbsent(array: Array<String>) {
    array.<!UNRESOLVED_REFERENCE!>clone<!>()
}

@<!UNRESOLVED_REFERENCE!>Metadata<!>
class MetaUnresolved
